--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "description": "A logger for use with fp-ts.",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "https://github.com/thewilkybarkid/clock-ts",
+  "homepage": "https://github.com/thewilkybarkid/logger-ts",
   "repository": "github:thewilkybarkid/logger-ts",
+  "sideEffects": false,
+  "peerDependencies": {
+    "logging-ts": "^0.3.4"
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@tsconfig/recommended": "^1.0.1",
     "husky": "^7.0.4",
     "prettier": "^2.6.0",
-    "prettier-plugin-sh": "^0.8.1"
+    "prettier-plugin-sh": "^0.8.1",
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "format": "prettier --ignore-unknown --check '**'",
     "format:fix": "npm run format -- --write",
-    "prepare": "which husky && husky install || true"
+    "prepare": "which husky && husky install || true",
+    "typecheck": "tsc --noEmit"
   }
 }
