--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "del-cli": "^4.0.1",
     "docs-ts": "^0.6.10",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
+    "fast-check": "^2.23.2",
     "husky": "^7.0.4",
     "prettier": "^2.6.0",
     "prettier-plugin-sh": "^0.8.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "scripts": {
@@ -36,6 +39,7 @@
     "format:fix": "npm run format -- --write",
     "lint": "eslint .",
     "prepare": "which husky && husky install || true",
+    "test": "jest",
     "typecheck": "tsc --noEmit"
   }
 }
