--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^7.0.4",
     "prettier": "^2.6.0",
     "prettier-plugin-sh": "^0.8.1",
+    "standard-version": "^9.3.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
@@ -42,6 +43,7 @@
     "format:fix": "npm run format -- --write",
     "lint": "eslint .",
     "prepare": "which husky && husky install || true",
+    "release": "standard-version --sign",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   }
