--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,5 +5,5 @@ search_enabled: true
 
 # Aux links for the upper right navigation
 aux_links:
-  'logger-ts on GitHub':
-    - 'https://github.com/thewilkybarkid/logger-ts'
+  'logger-fp-ts on GitHub':
+    - 'https://github.com/thewilkybarkid/logger-fp-ts'
