--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "logger-ts",
+  "name": "logger-fp-ts",
   "description": "A logger for use with fp-ts.",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "https://github.com/thewilkybarkid/logger-ts",
-  "repository": "github:thewilkybarkid/logger-ts",
+  "homepage": "https://github.com/thewilkybarkid/logger-fp-ts",
+  "repository": "github:thewilkybarkid/logger-fp-ts",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
