--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "dependencies": {
+    "chalk": "^4.1.2"
+  },
   "peerDependencies": {
     "clock-ts": "^0.1.0",
     "fp-ts": "^2.11.0",
