--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "dependencies": {
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "safe-stable-stringify": "^2.3.1"
   },
   "peerDependencies": {
     "clock-ts": "^0.1.0",
@@ -34,6 +35,7 @@
     "husky": "^7.0.4",
     "prettier": "^2.6.0",
     "prettier-plugin-sh": "^0.8.1",
+    "sortobject": "^4.16.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
