--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "clock-ts": "^0.1.0",
     "del-cli": "^4.0.1",
     "docs-ts": "^0.6.10",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "fast-check": "^2.23.2",
+    "fp-ts": "^2.11.9",
+    "fp-ts-contrib": "^0.1.29",
     "husky": "^7.0.4",
+    "logging-ts": "^0.3.4",
     "prettier": "^2.6.0",
     "prettier-plugin-sh": "^0.8.1",
     "sortobject": "^4.16.0",
